# FusionRadar-Project

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Dockerfile  DoxyFile.md  HowTo.md  LICENSE  README.md  Server.cpp  Server.h  docker-compose.yml  main.cpp
include/: json_reader_writer.h  logger.h
source/: logger.cpp
test/: CMakeLists.txt  ExampleTests.cpp  GoogleTestReadMe  TestFunctions.cpp  TestFunctions.h
